Ajout d'une nouvelle activité, non reliée à l'activité page_accueil

--- a/Application/app/src/main/AndroidManifest.xml
+++ b/Application/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PageProfils"
+            android:label="@string/title_activity_page_profils"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
