--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".SettingsActivity"></activity>
         <activity android:name=".StatsActivity" />
+        <activity android:name=".StatsSQLiteHelper" />
     </application>
 
 </manifest>
