StartPlayActivity, AddPartitionActivity, ChoosePartitionActivity, ChooseSpeedActivity, PlayPartitionActivity: création et implémentation de boutons de navigation entre elles

--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -21,8 +21,16 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".SettingsActivity"></activity>
+
         <activity android:name=".StatsActivity" />
         <activity android:name=".StatsSQLiteHelper" />
+        <activity android:name=".StartPlayActivity" />
+        <activity android:name=".ChooseSpeedActivity" />
+        <activity android:name=".ChoosePartitionActivity" />
+        <activity android:name=".AddPartitionActivity" />
+        <activity android:name=".PlayPartitionActivity" />
+
+
     </application>
 
 </manifest>
