ProfilesSQLiteHelper , PartitionsSQLiteHelper: création et début d'implémentation

--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
 
         <activity android:name=".StatsActivity" />
         <activity android:name=".StatsSQLiteHelper" />
+        <activity android:name=".ProfilesSQLiteHelper" />
+        <activity android:name=".PartitionsSQLiteHelper" />
         <activity android:name=".StartPlayActivity" />
         <activity android:name=".ChooseSpeedActivity" />
         <activity android:name=".ChoosePartitionActivity" />
