Ajout de sous packages pour Databases

--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
         <activity android:name=".activities.SettingsActivity"></activity>
 
         <activity android:name=".activities.StatsActivity" />
-        <activity android:name=".databases.StatsSQLiteHelper" />
-        <activity android:name=".databases.ProfilesSQLiteHelper" />
-        <activity android:name=".databases.PartitionsSQLiteHelper" />
+        <activity android:name=".databases.users.StatsSQLiteHelper" />
+        <activity android:name=".databases.users.ProfilesSQLiteHelper" />
+        <activity android:name=".databases.partitions.PartitionsSQLiteHelper" />
         <activity android:name=".activities.StartPlayActivity" />
         <activity android:name=".activities.ChooseSpeedActivity" />
         <activity android:name=".activities.ChoosePartitionActivity" />
