--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".activities.PlayPartitionActivity" />
         <activity android:name=".activities.ChoosePartitionInStatsActivity" />
         <activity android:name=".activities.StatsShownActivity" />
+        <activity android:name=".activities.PartitionPlayingActivity" />
         <activity
             android:name=".activities.NavigationDrawerActivity"
             android:label="@string/title_activity_navigation_drawer"
@@ -36,6 +37,7 @@
             android:name=".activities.ProfilesActivity"
             android:label="@string/title_activity_profils"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.PostPlayingActivity"></activity>
     </application>
 
 </manifest>
