--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hugo.guitarledgend">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,10 +32,6 @@
         <activity android:name=".activities.ChoosePartitionInStatsActivity" />
         <activity android:name=".activities.StatsShownActivity" />
         <activity android:name=".activities.PartitionPlayingActivity" />
-        <activity
-            android:name=".activities.NavigationDrawerActivity"
-            android:label="@string/title_activity_navigation_drawer"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.ProfilesActivity"
             android:label="@string/title_activity_profils"
