Changement de noms de layout de menu HelpActivity : création -> ajout du menu Aide dans les deux navigations drawers déjà en place

--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:name=".activities.profiles.ProfilesActivity"
             android:label="@string/title_activity_profils"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.PostPlayingActivity"></activity>
+        <activity android:name=".activities.PostPlayingActivity" />
+        <activity android:name=".activities.HelpActivity"></activity>
     </application>
 
 </manifest>
