--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:allowBackup="true"
@@ -39,7 +40,8 @@
             android:label="@string/title_activity_profils"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.PostPlayingActivity" />
-        <activity android:name=".activities.HelpActivity"></activity>
+        <activity android:name=".activities.HelpActivity" />
+        <activity android:name=".bluetooth.BluetoothActivity"></activity>
     </application>
 
 </manifest>
