--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -41,7 +41,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.PostPlayingActivity" />
         <activity android:name=".activities.HelpActivity" />
-        <activity android:name=".bluetooth.BluetoothActivity"></activity>
+        <activity android:name=".bluetooth.BluetoothActivity" />
+        <activity android:name=".activities.TestBluetoothActivity"></activity>
     </application>
 
 </manifest>
