PostPlayingActivity: choix de zone a rejouer termine !!! ReplayAreaActivity: creation et intent

--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         <activity android:name=".activities.PostPlayingActivity" />
         <activity android:name=".activities.HelpActivity" />
         <activity android:name=".bluetooth.BluetoothActivity" />
-        <activity android:name=".activities.TestBluetoothActivity"></activity>
+        <activity android:name=".activities.TestBluetoothActivity" />
+        <activity android:name=".activities.ReplayAreaActivity"></activity>
     </application>
 
 </manifest>
