--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
             android:name=".activities.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.stats.StatsGlobalActivity" />
         <activity android:name=".activities.AddChooseActivity" />
         <activity android:name=".activities.ChooseSpeedActivity" />
@@ -42,12 +41,11 @@
         <activity android:name=".activities.PostPlayingActivity" />
         <activity android:name=".activities.HelpActivity" />
         <activity android:name=".bluetooth.BluetoothActivity" />
-        <activity android:name=".activities.ReplayAreaActivity"></activity>
-        <activity android:name=".bluetooth.TestBluetoothActivity"></activity>
-<<<<<<< Updated upstream
-=======
-
->>>>>>> Stashed changes
+        <activity android:name=".activities.ReplayAreaActivity" />
+        <activity android:name=".bluetooth.TestBluetoothActivity" />
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:label="@string/title_activity_settings" />
     </application>
 
 </manifest>
