--- a/GuitarLEDgend/app/build.gradle
+++ b/GuitarLEDgend/app/build.gradle
@@ -31,5 +31,10 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:support-vector-drawable:25.0.0'
+    compile 'com.github.sembozdemir:ViewPagerArrowIndicator:1.0.0'
     testCompile 'junit:junit:4.12'
+}
+
+repositories {
+    maven { url "https://jitpack.io" }
 }
