--- a/GuitarLEDgend/app/build.gradle
+++ b/GuitarLEDgend/app/build.gradle
@@ -25,7 +25,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile files('libs/GraphView-4.2.1.jar')
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
@@ -33,6 +32,7 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.0.0'
     compile 'com.github.sembozdemir:ViewPagerArrowIndicator:1.0.0'
     testCompile 'junit:junit:4.12'
+    compile files('libs/commons-math3-3.6.1.jar')
 }
 
 repositories {
