--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -33,7 +33,6 @@
         <activity android:name=".activities.AskingPlayActivity" />
         <activity android:name=".activities.stats.ChoosePartitionInStatsActivity" />
         <activity android:name=".activities.stats.StatsDetailActivity" />
-        <activity android:name=".activities.PartitionPlayingActivity" />
         <activity
             android:name=".activities.profiles.ProfilesActivity"
             android:label="@string/title_activity_profils"
@@ -46,7 +45,7 @@
             android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity
-            android:name=".activities.TestPlayingActivity"
+            android:name=".activities.PartitionPlayingActivity"
             android:label="@string/title_activity_test_playing"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".activities.PreferencesModifyPartitionActivity"></activity>
