--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
+        android:name="com.example.hugo.guitarledgend.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/icon_appli"
         android:label="@string/app_name"
