Modifications après Test Complet du module Arduino intégré (sauf l'implémentation de la vitesse) Ajout d'une marge pour Genre et Auteur sur la ListView des partitions

--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -48,8 +48,9 @@
         <activity
             android:name=".activities.PartitionPlayingActivity"
             android:label="@string/title_activity_test_playing"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".activities.PreferencesModifyPartitionActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.PreferencesModifyPartitionActivity" />
+
     </application>
 
 </manifest>
