--- a/GuitarLEDgend/app/src/main/AndroidManifest.xml
+++ b/GuitarLEDgend/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.StartActivity">
+        <activity
+            android:name=".activities.StartActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,34 +26,53 @@
         </activity>
         <activity
             android:name=".activities.MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.stats.StatsGlobalActivity" />
-        <activity android:name=".activities.AddChooseActivity" />
-        <activity android:name=".activities.ChooseSpeedActivity" />
-        <activity android:name=".activities.ChoosePartitionActivity" />
-        <activity android:name=".activities.AddPartitionActivity" />
-        <activity android:name=".activities.AskingPlayActivity" />
-        <activity android:name=".activities.stats.ChoosePartitionInStatsActivity" />
-        <activity android:name=".activities.stats.StatsDetailActivity" />
+        <activity android:name=".activities.stats.StatsGlobalActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.AddChooseActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.ChooseSpeedActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.ChoosePartitionActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.AddPartitionActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.AskingPlayActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.stats.ChoosePartitionInStatsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.stats.StatsDetailActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.profiles.ProfilesActivity"
             android:label="@string/title_activity_profils"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.PostPlayingActivity" />
-        <activity android:name=".activities.HelpActivity" />
-        <activity android:name=".bluetooth.BluetoothActivity" />
-        <activity android:name=".bluetooth.TestBluetoothActivity" />
+        <activity android:name=".activities.PostPlayingActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.HelpActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".bluetooth.BluetoothActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".bluetooth.TestBluetoothActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.SettingsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_settings" />
         <activity
             android:name=".activities.PartitionPlayingActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_test_playing"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.PreferencesModifyPartitionActivity" />
-        <activity android:name=".activities.stats.HighScoresActivity" />
-        <activity android:name=".activities.PartitionPlayingActivityTest"></activity>
+        <activity android:name=".activities.PreferencesModifyPartitionActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.stats.HighScoresActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.PartitionPlayingActivityTest"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
